# zkMatrix

./: .gitignore  Cargo.toml  README.md  metric_csv.csv
.cargo/: config.toml
assets/: mathjax_support.html
benches/: bench_25519.rs  bench_ark.rs  bench_bls12_381.rs  experiment.rs  my_benchmark.rs
data/private/: readme.md
data/public/: commit_abc_sprs_2e10.com  commit_abc_sprs_2e12.com  commit_cab_sprs_2e10.com  readme.md
log/: log  log_2e10  log_2e12  log_2e20  log_dense
python/: fig1.py  fig1_double.py  fig1_reshape.py  metric_csv.csv
src/: commit.rs  commit_mat.rs  config.rs  curve.rs  dirac.rs  experiment.rs  experiment_data.rs  gen_matrix.rs  hdsip.rs  lib.rs  main.rs  mat.rs  mat_commit.rs  protocols.rs  setup.rs  srs.rs  test.rs  test_data.rs  utils.rs  zkp.rs
src/op/: mod.rs
src/protocols/: ip_gt.rs  left_proj.rs  mat_mul.rs  mod.rs  pip.rs  right_proj.rs  scalar_proj.rs  vec_com.rs
src/util/: inner_product.rs  mod.rs  sparse_matrix_commitment.rs  sparse_matrix_utils.rs  zp_utils.rs
src/utils/: curve.rs  dirac.rs  fiat_shamir.rs  kronecker.rs  mod.rs  test_data.rs  to_file.rs  xi.rs
src/zkprotocols/: mod.rs  zk_ip_gt.rs  zk_left_proj.rs  zk_matmul.rs  zk_right_proj.rs  zk_scalar_proj.rs  zk_scalars.rs  zk_trans.rs
