[package]
name = "zkMatrix"
version = "0.1.0"
authors = [
    "Miranda CONG <minsheu.cong@gmail.com>", 
    "Darren Cui <hdcui@cs.hku.hk>",
    ]
edition = "2021"
description = "Zero-knowledge Proofs for Linear Algebra"
license = "MIT"
# document = ["", "build-dependencies", "dev-dependencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bls12_381 = "0.8.0"
byteorder = "1.4.3"
curve25519-dalek = "4.1.1"
hex = "0.4"
ndarray = "0.15.3"
rand = "0.8.4"
rayon = "1.5.1"
serde = {version = "1.0.130", features = ["derive"]}

[dependencies.curv-kzen]
version = "0.10.0"
default-features = false
features = ["num-bigint"]
# documentation = "https://docs.rs/curv-kzen/0.10.0/curv/"
# lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = true
path = "benches/my_benchmark.rs"

[[bench]]
name = "bench_25519"
harness = true
path = "benches/bench_25519.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "assets/mathjax_support.html" ]
