[package]
name = "zkmatrix"
version = "0.1.0"
authors = [
    "Anonymous", 
    ]
edition = "2021"
description = "zk-SNAKR for linear algebra"
license = "MIT"
# document = ["", "build-dependencies", "dev-dependencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bls12_381 = "0.8.0"
byteorder = "1.4.3"
# curve25519-dalek = "4.1.1"
hex = "0.4"
ndarray = "0.15.3"
rand = "0.8.4"
rayon = "1.5.1"
sha2 = "0.10.8"
serde = {version = "1.0.130", features = ["derive"]}

# ark-bls12-381 = "0.4.0"
# ark-ec = "0.4.0"
# ark-ff = "0.4.0"
# ark-std = "0.4.0"

[dependencies.curv-kzen]
version = "0.10.0"
default-features = false
features = ["num-bigint"]
# documentation = "https://docs.rs/curv-kzen/0.10.0/curv/"
# lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "experiment"
harness = false
path = "benches/experiment.rs"


[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "assets/mathjax_support.html" ]
